admission-policies/default/capi-controllers-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: capi-controllers
  namespace: openshift-cluster-api
  labels:
    k8s-app: capi-controllers
spec:
  selector:
    matchLabels:
      k8s-app: capi-controllers
  replicas: 1
  template:
    metadata:
      annotations:
        target.workload.openshift.io/management: '{"effect": "PreferredDuringScheduling"}'
        openshift.io/required-scc: restricted-v2
      labels:
        k8s-app: capi-controllers
    spec:
      serviceAccountName: capi-controllers
      containers:
      - name: capi-controllers
        image: registry.ci.openshift.org/openshift:cluster-capi-operator
        command:
        - /capi-controllers
        args:
          - --diagnostics-address=:8443
        ports:
        - containerPort: 9443
          name: webhook-server
          protocol: TCP
        - containerPort: 8443
          name: diagnostics-o
          protocol: TCP
        - containerPort: 9440
          name: healthz-o
          protocol: TCP
        resources:
          requests:
            cpu: 10m
            memory: 50Mi
        terminationMessagePolicy: FallbackToLogsOnError
        volumeMounts:
        - name: cert
          mountPath: /tmp/k8s-webhook-server/serving-certs
          readOnly: true
        - name: metrics-cert
          mountPath: /tmp/k8s-metrics-server/serving-certs
          readOnly: true
      - name: machine-api-migration
        image: registry.ci.openshift.org/openshift:cluster-capi-operator
        command:
        - /machine-api-migration
        args:
          - --diagnostics-address=:8442
          - --health-addr=:9441
        ports:
        - containerPort: 8442
          name: diagnostics-m
          protocol: TCP
        - containerPort: 9441
          name: healthz-m
          protocol: TCP
        resources:
          requests:
            cpu: 10m
            memory: 50Mi
        terminationMessagePolicy: FallbackToLogsOnError
        volumeMounts:
        - name: metrics-cert
          mountPath: /tmp/k8s-metrics-server/serving-certs
          readOnly: true
      nodeSelector:
        node-role.kubernetes.io/control-plane: ""
      priorityClassName: system-cluster-critical
      restartPolicy: Always
      tolerations:
      - key: "node-role.kubernetes.io/master"
        operator: "Exists"
        effect: "NoSchedule"
      - key: "node-role.kubernetes.io/control-plane"
        operator: "Exists"
        effect: "NoSchedule"
      volumes:
      - name: cert
        secret:
          defaultMode: 420
          secretName: capi-controllers-webhook-service-cert
      - name: metrics-cert
        secret:
          defaultMode: 420
          secretName: capi-controllers-metrics-tls
