admission-policies/default/prevent-capi-fields-unsupported-by-mapi.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: openshift-cluster-api-prevent-setting-of-capi-fields-unsupported-by-mapi
spec:
  failurePolicy: Fail
  matchConstraints:
    matchPolicy: Equivalent
    namespaceSelector: {}
    objectSelector: {}
    resourceRules:
      - apiGroups: ["cluster.x-k8s.io"]
        apiVersions: ["v1beta2"]
        operations: ["CREATE", "UPDATE"]
        resources: ["machines", "machinesets"]
        scope: "*"
  variables:
    - name: machineSpec
      expression: "object.kind == 'Machine' ? object.spec : object.spec.template.spec"
    - name: specPath
      expression: "object.kind == 'Machine' ? 'spec' : 'spec.template.spec'"
  validations:
    - expression: "!has(variables.machineSpec.version)"
      messageExpression: "variables.specPath + '.version is a forbidden field'"
    - expression: "!has(variables.machineSpec.readinessGates)"
      messageExpression: "variables.specPath + '.readinessGates is a forbidden field'"
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: openshift-cluster-api-prevent-setting-of-capi-fields-unsupported-by-mapi
spec:
  matchResources:
    matchPolicy: Equivalent
    namespaceSelector:
      matchLabels:
        kubernetes.io/metadata.name: openshift-cluster-api
    objectSelector: {}
  policyName: openshift-cluster-api-prevent-setting-of-capi-fields-unsupported-by-mapi
  validationActions:
      - Deny
