admission-policies/default/prevent-migration-when-machine-updating.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: openshift-prevent-migration-when-machine-updating
spec:
  failurePolicy: Fail
  matchConstraints:
    matchPolicy: Equivalent
    namespaceSelector: {}
    objectSelector: {}
    resourceRules:
      - apiGroups: ["machine.openshift.io"]
        apiVersions: ["*"]
        operations: ["UPDATE"]
        resources: ["machines"]
        scope: "*"

  # All validations must evaluate to true
  validations:
  - expression: '!(has(object.status) && has(object.status.phase) && object.status.phase == "Provisioning" && (oldObject.spec.authoritativeAPI != object.spec.authoritativeAPI))'
    message: 'Cannot update .spec.authoritativeAPI when machine is in Provisioning phase'
  - expression: '!(has(object.metadata.deletionTimestamp) && (oldObject.spec.authoritativeAPI != object.spec.authoritativeAPI))'
    message: 'Cannot update .spec.authoritativeAPI when machine has a non-zero deletion timestamp'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: openshift-prevent-migration-when-machine-updating
spec:
  matchResources:
    matchPolicy: Equivalent
    namespaceSelector:
      matchLabels:
        kubernetes.io/metadata.name: openshift-machine-api
    objectSelector: {}
  policyName: openshift-prevent-migration-when-machine-updating
  validationActions:
      - Deny
