admission-policies/default/provide-warning-when-not-synchronized.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: openshift-provide-warning-when-not-synchronized
spec:
  failurePolicy: Ignore

  matchConstraints:
    matchPolicy: Equivalent
    namespaceSelector: {}
    objectSelector: {}
    resourceRules:
      - apiGroups: ["machine.openshift.io"]
        apiVersions: ["*"]
        operations: ["UPDATE"]
        resources: ["machines"]
        scope: "*"
  variables:
    - name: syncCond
      expression: >
        has(object.status.conditions) ?
        object.status.conditions.exists(c, c.type == "Synchronized") :
        false
    - name: syncBad
      expression: >
          variables.syncCond &&
          object.status.conditions.exists(c,
            c.type == "Synchronized" &&
            (c.status == "False" || c.status == "Unknown")
          )
    - name: authAPIChanged
      expression: >
        oldObject.spec.authoritativeAPI != object.spec.authoritativeAPI

  # All validations must evaluate to true
  validations:
  - expression: '!variables.authAPIChanged || (variables.syncCond && !variables.syncBad)'
    message: 'Updating .spec.authoritativeAPI when the Synchronized condition is not true means changes may not take effect'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: openshift-provide-warning-when-not-synchronized
spec:
  matchResources:
    matchPolicy: Equivalent
    namespaceSelector:
      matchLabels:
        kubernetes.io/metadata.name: openshift-machine-api
    objectSelector: {}
  policyName: openshift-provide-warning-when-not-synchronized
  validationActions:
      - Warn
